# ctxledger

./: .dockerignore  .env.example  .env.production.example  .gitignore  .rules  Dockerfile  Makefile  README.ja.md  README.md  azure.yaml  last_session.md  pyproject.toml
docker/: docker-compose.auth.yml  docker-compose.dev.yml  docker-compose.https-no-auth.yml  docker-compose.observability.yml  docker-compose.small-auth.yml  docker-compose.test-ports.yml  docker-compose.yml
docker/auth_small/: Dockerfile
docker/overrides/: debug-logging.yml
docker/postgres-age/: Dockerfile  docker-compose.reusable.yml
docker/traefik/: dynamic.yml
docker/traefik-no-auth/: dynamic.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  architecture.md  deployment.md  grafana_operator_runbook.md  imple_plan_0.1.0.md  imple_plan_0.5.3_projection_deprecation.md  imple_plan_0.5.4_projection_removal_cleanup.md  imple_plan_review_0.1.0.md  mcp-api.md  memory-model.md  roadmap.md  rules.ctxledger  small_auth_operator_runbook.md  specification.md  v0.1.0_acceptance_evidence.md  workflow-model.md
docs/memory/: README.md  age_docker_provisioning_plan.md  age_image_candidate_decision_record_template.md  age_image_candidate_prebuilt_concrete_record.md  age_image_candidate_repo_build_record.md  age_image_selection_decision.md  age_image_selection_note.md  age_prototype_validation_runbook.md  auxiliary_groups_top_level_sibling_decision.md  constrained_age_supports_prototype.md  constrained_age_supports_prototype_implementation_plan.md  summary_build_runbook.md  (+12 more)
infra/: README.md  main.bicep  main.dev.bicepparam  main.prod.bicepparam  main.staging.bicepparam
schemas/: postgres.sql
scripts/: apply_schema.py  bootstrap_azure_ai.py  bootstrap_envrcctl_secrets.sh  bootstrap_schema.py  ensure_age_extension.py  mcp_http_smoke.py  populate_env_placeholders.py  postdeploy_smoke.py  private_init_entrypoint.sh  run_azure_bootstrap.sh  setup_grafana_observability.py  start_with_bootstrap.sh  write_mcp_client_snippets.py  write_mcp_snippets_readme.py
tests/: __init__.py  test_cli.py  test_config.py  test_coverage_targets.py  test_mcp_modules.py  test_mcp_tool_handlers.py  test_postgres_db.py  test_postgres_helpers.py  test_postgres_integration.py  test_projection_writer.py  test_server.py  test_workflow_service.py
(+318 files in other folders)
