[project]
name = "ctxledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" }
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2",
]

[project.scripts]
ctxledger = "ctxledger:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]
